# zellij-driver

./: .env.example  .gitignore  AGENTS.md  Brainstorm.md  CONVERSATION_SUMMARY_INTENT_TRACKING.md  Cargo.toml  DEVELOPMENT.md  DIRECTOR_NOTIFICATION.md  GOD.md  INTENT_TRACKING_IMPLEMENTATION_PLAN.md  PRD.md  README.md  REBRANDING_PLAN.md  RESTORATION_DESIGN_NOTES.md  compose.yml  config.example.toml  docker-compose.yml  mise.toml
.bmad/: sprint-status.yaml
.github/workflows/: ci.yml
.mise/tasks/: main.toml
configs/: mise-docs.json  mise-tasks.json
docs/: ENGINEERING_STANDARDS.md  architecture-perth-2026-01-05.md  bmm-workflow-status.yaml  prd-perth-2026-01-04.md  sprint-5-revised.md  sprint-5-target-story.md  sprint-plan-perth-2026-01-05.md
phases_output/: final_analysis.md  metrics.md  phase1_discovery.md  phase2_planning.md  phase3_analysis.md  phase4_synthesis.md  phase5_consolidation.md
rabbitmq/: definitions.json  rabbitmq.conf
scripts/: health-check.sh
skill/: DEVELOPER.md  SKILL.md
skill/references/: cli-reference.md
src/: bloodbank.rs  cli.rs  config.rs  context.rs  filter.rs  lib.rs  main.rs  orchestrator.rs  output.rs  restore.rs  snapshot.rs  state.rs  types.rs  zellij.rs
src/llm/: anthropic.rs  circuit_breaker.rs  mod.rs  noop.rs  ollama.rs  openai.rs
tests/: intent_history.rs
