[package]
name = "zellij-driver"
version = "0.1.0"
edition = "2024"

[lib]
name = "zellij_driver"
path = "src/lib.rs"

[[bin]]
name = "zdrive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "process"] }
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
